# schema-accessibilite-voirie

./: README.md  schema.yml
Gitbook/: readme.md
Réunions/: readme.md
Réunions/2025/: README.md
Schema/Format CNIG Accessibilite/: .gitignore  cnig_accessibilite_v2025.gpkg
Schema/Gabarit geopackage/: gabarit_cnig_accessibilite.gpkg  readme.md  script_gabarit_CNIG_Accessibilité.sql  test.md
Schema/Gabarit-PostgreSQL-PostGIS/: readme.md
Schema/MCD UML pour UMLetino/: README.md
Schema/format_cnig_accessibilite_geopackage/: cnig_accessibilite_v2025.gpkg  readme.md  setup.md
Standard/: 250902_Standard_CNIG_Accessibilite_v2021-10_rev2025-08_mode_modif.odt  251021_Standard_CNIG_Accessibilite_v2021-10_rev2025-08_mode_modif.odt  readme.md  test.md
Standard/Format CNIG Accessibilite/: readme.md  setup.md
Standard/Format_echange/: format_echange.md
Standard/GPKG-CNIG-Accessibilite/: .gitignore  cnig_accessibilite_v2025.gpkg  pyproject.toml  readme.md
Standard/GPKG-CNIG-Accessibilite/cnig_accessibilite/: __init__.py  alembic.ini  enums.py
Standard/GPKG-CNIG-Accessibilite/cnig_accessibilite/cnig_versions/: mappings.py
Standard/GPKG-CNIG-Accessibilite/cnig_accessibilite/cnig_versions/v2025/: enums.py
Standard/GPKG-CNIG-Accessibilite/cnig_accessibilite/cnig_versions/v2026/: __init__.py  schema.py
Standard/GPKG-CNIG-Accessibilite/cnig_accessibilite/migrations/: env.py
Standard/Gabarit QGIS/: readme.md
Standard/Gabarit geopackage/: 250828_spécification_gabarit_CNIG_Accessibilité.md  Specification du format echange CNIG Accessibilité.md  batch.sh  (+5 more)
(+44 files in other folders)
